@@ -105,7 +105,12 @@ check_PROGRAMS = $(TESTS)
 # not be the most portable approach, but it is pragmatic and I'm
 # willing to do something cleaner as soon as it causes someone a
 # problem.
-INCLUDES = -D_GNU_SOURCE -I$(srcdir) $(CAIRO_CFLAGS) -I$(top_srcdir)/src
+INCLUDES =					\
+	-D_GNU_SOURCE				\
+	$(CAIRO_CFLAGS)				\
+	-I$(srcdir)				\
+	-I$(top_srcdir)/src			\
+	-I$(top_builddir)/src
 
 noinst_LTLIBRARIES = libcairotest.la
 
